--- a/Wheel/Base.lproj/LaunchScreen.storyboard
+++ b/Wheel/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,7 +20,74 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <imageView clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchbackground" translatesAutoresizingMaskIntoConstraints="NO" id="98E-30-DzZ" userLabel="background">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchicon" translatesAutoresizingMaskIntoConstraints="NO" id="Dpj-Yr-tqa" userLabel="icon">
+                                <rect key="frame" x="82" y="219" width="211" height="168"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="168" id="P93-Ij-uxq"/>
+                                    <constraint firstAttribute="width" constant="211" id="Y2u-Mb-vec"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JSJ-NN-wAF">
+                                <rect key="frame" x="24" y="437" width="327" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="327" id="RVa-N7-Ql7"/>
+                                    <constraint firstAttribute="height" constant="31" id="tZ5-jQ-mYf"/>
+                                </constraints>
+                                <attributedString key="attributedText">
+                                    <fragment content="Let’s build it! ">
+                                        <attributes>
+                                            <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <font key="NSFont" size="36" name="Avenir-Light"/>
+                                            <font key="NSOriginalFont" size="36" name="Avenir-Light"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aJK-t1-xhs">
+                                <rect key="frame" x="91" y="28" width="193" height="49"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="193" id="Mkx-Al-ZrE"/>
+                                    <constraint firstAttribute="height" constant="49" id="hT2-r7-6Pm"/>
+                                </constraints>
+                                <attributedString key="attributedText">
+                                    <fragment content="salad">
+                                        <attributes>
+                                            <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <font key="NSFont" size="36" name="Avenir-Black"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                    <fragment content="wheel">
+                                        <attributes>
+                                            <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <font key="NSFont" size="36" name="Avenir-Book"/>
+                                            <font key="NSOriginalFont" size="36" name="Avenir-Book"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="98E-30-DzZ" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="3LF-RA-0kX"/>
+                            <constraint firstItem="aJK-t1-xhs" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" constant="28" id="BeM-tA-4xC"/>
+                            <constraint firstItem="Dpj-Yr-tqa" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Jxn-3e-h4t"/>
+                            <constraint firstItem="JSJ-NN-wAF" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="TCT-Uf-365"/>
+                            <constraint firstItem="Dpj-Yr-tqa" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" constant="219" id="Uso-Dw-bYC"/>
+                            <constraint firstItem="JSJ-NN-wAF" firstAttribute="top" secondItem="Dpj-Yr-tqa" secondAttribute="bottom" constant="50" id="n2O-fT-vqa"/>
+                            <constraint firstItem="98E-30-DzZ" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="oqL-ob-Gem"/>
+                            <constraint firstItem="98E-30-DzZ" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="qph-8j-84b"/>
+                            <constraint firstItem="98E-30-DzZ" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" id="vf8-gb-WBz"/>
+                            <constraint firstItem="aJK-t1-xhs" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="ycr-w2-hP5"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +95,8 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="launchbackground" width="414" height="736"/>
+        <image name="launchicon" width="208" height="167"/>
+    </resources>
 </document>
