--- a/Wheel/Base.lproj/Main.storyboard
+++ b/Wheel/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Bo9-Se-FJX">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,6 +9,57 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Onboarding-->
+        <scene sceneID="ZaX-RN-MeC">
+            <objects>
+                <viewController id="Bo9-Se-FJX" userLabel="Onboarding" customClass="OnboardingViewController" customModule="Wheel" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="d3M-WR-N0i"/>
+                        <viewControllerLayoutGuide type="bottom" id="fNP-ag-Z5Q"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="9Ls-Pi-wet">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bgG-NX-cZ2">
+                                <rect key="frame" x="124.5" y="599" width="126" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="Iao-L3-kwA"/>
+                                    <constraint firstAttribute="width" constant="126" id="wsg-Nw-Wwc"/>
+                                </constraints>
+                                <state key="normal" title="SKIP"/>
+                                <connections>
+                                    <action selector="skip:" destination="uok-RC-Ph1" eventType="touchUpInside" id="yG5-iD-Iea"/>
+                                    <segue destination="BYZ-38-t0r" kind="showDetail" action="showViewController:sender:" id="1xO-bq-zxa"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t21-yf-Em7" userLabel="Pager">
+                                <rect key="frame" x="143.5" y="471" width="88" height="8"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="88" id="Gfp-lW-Pdg"/>
+                                    <constraint firstAttribute="height" constant="8" id="f3V-F4-YmT"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="fNP-ag-Z5Q" firstAttribute="top" secondItem="t21-yf-Em7" secondAttribute="bottom" constant="188" id="6pT-pY-O4v"/>
+                            <constraint firstItem="bgG-NX-cZ2" firstAttribute="centerX" secondItem="9Ls-Pi-wet" secondAttribute="centerX" id="Cyj-Ph-ZKN"/>
+                            <constraint firstItem="t21-yf-Em7" firstAttribute="centerX" secondItem="9Ls-Pi-wet" secondAttribute="centerX" id="Vr8-07-hsE"/>
+                            <constraint firstItem="fNP-ag-Z5Q" firstAttribute="top" secondItem="bgG-NX-cZ2" secondAttribute="bottom" constant="47" id="hjJ-l5-peE"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="pager" destination="t21-yf-Em7" id="KtE-j2-1NY"/>
+                        <outlet property="skip" destination="bgG-NX-cZ2" id="A9V-Dd-qj4"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GnR-3b-zIy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="uok-RC-Ph1" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="-912" y="-633"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -27,6 +78,23 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="162" y="-142"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="de4-Ub-Gip">
+            <objects>
+                <viewController id="xjE-g0-XdL" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="5aA-UE-LCQ"/>
+                        <viewControllerLayoutGuide type="bottom" id="2BW-qd-DtV"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="6zx-Kv-Ji3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zB1-sm-Iju" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
         </scene>
     </scenes>
 </document>
