--- a/Wheel/Base.lproj/Main.storyboard
+++ b/Wheel/Base.lproj/Main.storyboard
@@ -58,7 +58,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GnR-3b-zIy" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="uok-RC-Ph1" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="-912" y="-633"/>
+            <point key="canvasLocation" x="-912.79999999999995" y="-633.73313343328346"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
