--- a/Wheel/Base.lproj/Main.storyboard
+++ b/Wheel/Base.lproj/Main.storyboard
@@ -8,11 +8,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="HelveticaNeue.ttc">
-            <string>HelveticaNeue</string>
-        </array>
-    </customFonts>
     <scenes>
         <!--Onboarding-->
         <scene sceneID="ZaX-RN-MeC">
@@ -26,21 +21,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bgG-NX-cZ2">
-                                <rect key="frame" x="124.5" y="599" width="126" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="Iao-L3-kwA"/>
-                                    <constraint firstAttribute="width" constant="126" id="wsg-Nw-Wwc"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
-                                <state key="normal" title="SKIP">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="skip:" destination="uok-RC-Ph1" eventType="touchUpInside" id="yG5-iD-Iea"/>
-                                    <segue destination="BYZ-38-t0r" kind="showDetail" action="showViewController:sender:" id="1xO-bq-zxa"/>
-                                </connections>
-                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t21-yf-Em7" userLabel="Pager">
                                 <rect key="frame" x="143.5" y="471" width="88" height="8"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -53,18 +33,15 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="fNP-ag-Z5Q" firstAttribute="top" secondItem="t21-yf-Em7" secondAttribute="bottom" constant="188" id="6pT-pY-O4v"/>
-                            <constraint firstItem="bgG-NX-cZ2" firstAttribute="centerX" secondItem="9Ls-Pi-wet" secondAttribute="centerX" id="Cyj-Ph-ZKN"/>
                             <constraint firstItem="t21-yf-Em7" firstAttribute="centerX" secondItem="9Ls-Pi-wet" secondAttribute="centerX" id="Vr8-07-hsE"/>
-                            <constraint firstItem="fNP-ag-Z5Q" firstAttribute="top" secondItem="bgG-NX-cZ2" secondAttribute="bottom" constant="47" id="hjJ-l5-peE"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="pager" destination="t21-yf-Em7" id="KtE-j2-1NY"/>
-                        <outlet property="skip" destination="bgG-NX-cZ2" id="A9V-Dd-qj4"/>
+                        <segue destination="BYZ-38-t0r" kind="showDetail" identifier="OnboardingToWheels" id="X2M-VB-YeA"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GnR-3b-zIy" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <exit id="uok-RC-Ph1" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="-912.79999999999995" y="-633.73313343328346"/>
         </scene>
@@ -103,6 +80,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zB1-sm-Iju" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-578" y="262"/>
         </scene>
     </scenes>
 </document>
